front page improvements

--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -1,10 +1,10 @@
 {{set . "title" "Home"}}
 {{template "header.html" .}}
 
-<header class="jumbotron" style="background-color:#A9F16C">
+<header class="jumbotron myjumbo">
   <div class="container">
     <div class="row">
-      <h1>It works!</h1>
+      <h1 class="title mx-auto"> <img src="/public/img/shark.svg" height="200px"> sharkDeploy</h1>
       <p></p>
     </div>
   </div>
@@ -17,5 +17,6 @@
     </div>
   </div>
 </div>
+
 
 {{template "footer.html" .}}
